# Polymorphic_Data_Reporter

./: .gitignore  README.md  pyproject.toml  requirements.txt
_docs/: docs.md  filestructure.md
config/: config.toml
runs/: gold_summary_20250821T182151Z.csv  gold_summary_20250821T195559Z.csv
runs/f3/: layout_plan.peek.json  manifest.peek.json  topics_preview.csv  topics_selected_preview.csv
runs/f4/: layout_plan.peek.json  manifest.peek.json  topics_preview.csv  topics_selected_preview.csv
runs/x1.parquet/: layout_plan.peek.json  manifest.peek.json  topics_preview.csv  topics_selected_preview.csv
schemas/: f3.schema.toml  f4.schema.toml  x1.parquet.schema.toml  x1.schema.toml
scripts/: print_config.py
scripts/charts/: change_over_time_demo.py  correlation_demo.py  deviation_demo.py  distribution_demo.py  flow_demo.py  magnitude_demo.py  part_to_whole_demo.py  ranking_demo.py  spatial_demo.py
scripts/datagen/: generate_messy_tree.py
scripts/nlp/: nlp_bootstrap.py
scripts/pipeline/: run_clean_once.py  run_nlp_clean.py  run_silver_gold.py  tune_one_slug.py
src/chart/: __init__.py  change_over_time.py  common.py  correlation.py  deviation.py  distribution.py  flow.py  magnitude.py  part_to_whole.py  playwright_png.py  ranking.py  spatial.py
src/cleaning/: __init__.py  dsl.py  engine.py  metrics.py  policy.py  recheck.py  registry.py  report.py  rescore.py
src/cleaning/rules_builtin/: bool_norm.py  categorical.py  date_parts.py  datetime_ops.py  id_ops.py  missing.py  numeric_ops.py  outliers.py  prune.py  regex_ops.py  text_norm.py  types.py  units.py
src/config_model/: model.py
src/gold/: materialize.py
src/ingestion/: ingest.py
src/io/: catalog.py  readers.py  storage.py  writers.py
src/layout/: planner.py
src/nlg/: narrative.py  narrative_constants.py
src/nlp/: bootstrap.py  roles.py  schema.py  schema_io.py  suggestions.py
src/topics/: candidates.py  fe.py  model.py  relations.py  scoring.py  select.py  stats_basic.py  stats_pvalues.py
src/utils/: fp.py  ids.py  log.py  time.py
tests/: conftest.py
tests/charts/: test_export_png.py
tests/clean/: test_bool_norm.py  test_categorical.py  test_date_parts.py  test_datetime.py  test_dsl.py  test_engine.py  test_id_ops.py  test_metrics.py  test_missing.py  test_numeric_ops.py  test_outliers.py  test_policy.py  test_prune.py  test_recheck.py  test_regex_ops.py  test_registry.py  test_report.py  test_rescore.py  test_text_norm.py  test_types.py  test_units.py
tests/config/: test_config_loader.py
tests/gold/: test_materialize.py
tests/io/: test_catalog.py  test_readers.py  test_storage.py  test_writers.py
tests/loaders/: test_planner.py
tests/nlp/: test_bootstrap.py  test_narrative.py  test_roles.py  test_schema.py  test_schema_io.py  test_suggestions.py
tests/topics/: test_fe.py  test_model.py  test_scoring.py  test_select.py  test_stats_basic.py  test_stats_pvalues.py
tests/utils/: test_fp.py  test_ids.py  test_log.py  test_time.py
