[tool.poetry]
name = "polymorphic-data-reporter"
version = "0.1.0"
description = "Dynamic, polymorphic data reporter with ETL stages, automated profiling, chart picking, and templated reports."
authors = ["You <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]
# Python 3.11 is a sweet spot for DuckDB/Plotly/Pydantic v2
[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
polars = "^1.9.0"
duckdb = "^1.1.0"
jinja2 = "^3.1.4"
pydantic = "^2.8.2"
plotly = "^5.24.1"
kaleido = "^0.2.1"        # static PNG export for Plotly
minio = "^7.2.10"         # S3-compatible client for MinIO
boto3 = "^1.34.162"       # optional S3 route
s3fs = "^2024.6.1"        # filesystem-style S3 access (optional)
pyyaml = "^6.0.2"
python-slugify = "^8.0.4"
tomlkit = "^0.13.2"
typing-extensions = "^4.12.2"
orjson = "^3.10.7"        # fast JSON for manifests
# PDF: choose one engine; chromium is containerized, WeasyPrint is local-friendly but needs system libs
weasyprint = {version="^62.3", optional=true}
# If you want NLP snippets later:
# nltk = {version="^3.9.1", optional=true}
# scikit-learn = {version="^1.5.1", optional=true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
ruff = "^0.6.7"

[tool.poetry.extras]
pdf = ["weasyprint"]
# nlp = ["nltk", "scikit-learn"]

[tool.poetry.scripts]
discover-sources = "scripts.discover_sources:main"
ingest-one = "scripts.ingest_one:main"
profile-one = "scripts.profile_one:main"
clean-one = "scripts.clean_one:main"
topics-one = "scripts.topics_one:main"
report-one = "scripts.report_one:main"
e2e-one = "scripts.end_to_end:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
