[tool.poetry]
name = "polymorphic-data-reporter"
version = "0.1.0"
description = "Dynamic, polymorphic data reporter with ETL stages, automated profiling, chart picking, and templated reports."
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Core
pandas = "^2.3.1"
polars = "^1.32.2"
duckdb = "^1.3.2"
jinja2 = "^3.1.6"
pydantic = "^2.11.7"
plotly = "^5.24.1"
networkx = "^3.2.1"
scipy = "^1.13.1"
orjson = "^3.11.2"
python-slugify = "^8.0.4"
pyyaml = "^6.0.2"
tomlkit = "^0.13.2"
typing-extensions = "^4.12.2"
# Utilities (new)
toolz = "^0.12.1"
more-itertools = "^10.5.0"
# Storage / IO
minio = "^7.2.16"
boto3 = "^1.39.11"
s3fs = "^2024.12.0"
pyarrow = "^16.1.0"
# Static PNG via headless Chromium screenshot
playwright = "^1.54.0"
# Optional PDF engine
weasyprint = { version = "^62.3", optional = true }
faker = "^25.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.17.1"
ruff = "^0.6.9"

[tool.poetry.extras]
pdf = ["weasyprint"]

[tool.poetry.scripts]
discover-sources = "scripts.discover_sources:main"
ingest-one = "scripts.ingest_one:main"
profile-one = "scripts.profile_one:main"
clean-one = "scripts.clean_one:main"
topics-one = "scripts.topics_one:main"
report-one = "scripts.report_one:main"
e2e-one = "scripts.end_to_end:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
